--- a/package.json
+++ b/package.json
@@ -14,13 +14,9 @@
     "intersection-observer": "^0.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
-    "react-simple-typewriter": "^5.0.1",
-    "react-typewriter-effect": "^1.1.0",
-    "sass": "^1.62.1",
     "scrollmagic": "^2.0.8",
+    "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
